# bimanual_ur10e

./: .gitignore  .gitmodules  README.md  qos_override.yaml  requirements.txt
scripts/: record_bag.sh  replay_bag.sh  replay_rosbag.sh
src/bimanual_ur10e/: CMakeLists.txt  package.xml
src/bimanual_ur10e/config/: bimanual_ur10e.rviz  gripper1_standalone.urdf.xacro  gripper2_controllers.yaml  gripper2_standalone.urdf.xacro  gripper_controllers.yaml  robot1_controllers.yaml  robot2_controllers.yaml  ur_robots.yaml
src/bimanual_ur10e/launch/: bimanual_ur10e.launch.py  gripper_publisher.launch.py  move_to_pregrasp.launch.py  offline.launch.py  online.launch.py  online_with_gripper.launch.py  replay.launch.py
src/bimanual_ur10e/scripts/: joint_state_publisher.py  joint_state_republisher.py  move_to_pregrasp.py  move_to_pregrasp_rtde.py  robotiq_gripper_publisher.py
src/bimanual_ur10e/urdf/: bimanual_ur10e.urdf.xacro
