<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bimanual_ur10e</name>
  <version>0.1.0</version>
  <description>ROS2 Humble package for a bimanual UR10e setup with visualization, joint state publishing, and rosbag support.</description>
  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>ur_robot_driver</depend>
  <depend>robotiq_description</depend>
  <depend>robotiq_driver</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_transport</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
